# stateful-pipeline-framework

./: DESIGN_DECISION.md  README.md  USAGE_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt
document_processing/: main.py  pipeline.py  run_document_pipeline.py  schemas.py
document_processing/steps/: classify_text.py  extract_keywords.py  generate_report.py
src/pipeline_engine/adapters/persistence/: memory.py
src/pipeline_engine/adapters/persistence/__pycache__/: memory.cpython-313.pyc.1904840255376
src/pipeline_engine/core/: context.py  errors.py  inspector.py  pipeline.py  retry.py  state.py  step.py
src/pipeline_engine/core/__pycache__/: pipeline.cpython-313.pyc.1338745329760
src/pipeline_engine/ports/: state_repository.py
tests/integration/: test_document_processing_integration.py  test_pipeline_integration.py
tests/unit/: test_context.py  test_errors.py  test_inspector.py  test_memory_repository.py  test_pipeline.py  test_retry.py  test_state.py
tests/unit/__pycache__/: test_retry.cpython-313-pytest-9.0.2.pyc.27540
